issue #75: added product as entity to domain model