@@ -24,6 +24,7 @@
             --add-reads org.financer.shared=ALL-UNNAMED
             --add-opens org.financer.shared/org.financer.shared.model.db=ALL-UNNAMED
             --add-opens org.financer.client.javafx/org.financer.client.javafx.main=ALL-UNNAMED
+            --add-opens org.financer.server/org.financer.server=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.application=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.application.api=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.application.service=ALL-UNNAMED
